Refactor topology validation for next step (#2889)
* Refactor topology validation for next step