@@ -4,7 +4,6 @@
 package oracle.kubernetes.weblogic.domain.model;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -17,10 +16,6 @@ import oracle.kubernetes.operator.TuningParameters;
 import oracle.kubernetes.operator.helpers.KubernetesTestSupport;
 import oracle.kubernetes.operator.helpers.LegalNames;
 import oracle.kubernetes.operator.helpers.TuningParametersStub;
-import oracle.kubernetes.operator.wlsconfig.NetworkAccessPoint;
-import oracle.kubernetes.operator.wlsconfig.WlsClusterConfig;
-import oracle.kubernetes.operator.wlsconfig.WlsDomainConfig;
-import oracle.kubernetes.operator.wlsconfig.WlsServerConfig;
 import oracle.kubernetes.weblogic.domain.DomainConfigurator;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -32,13 +27,10 @@ import static oracle.kubernetes.operator.DomainProcessorTestSetup.createTestDoma
 import static oracle.kubernetes.operator.DomainSourceType.FROM_MODEL;
 import static oracle.kubernetes.operator.DomainSourceType.IMAGE;
 import static oracle.kubernetes.operator.KubernetesConstants.WLS_CONTAINER_NAME;
-import static oracle.kubernetes.operator.ProcessingConstants.DOMAIN_TOPOLOGY;
 import static oracle.kubernetes.operator.helpers.PodHelperTestBase.getAuxiliaryImage;
 import static oracle.kubernetes.weblogic.domain.model.Model.DEFAULT_AUXILIARY_IMAGE_MOUNT_PATH;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.empty;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.stringContainsInOrder;
 import static org.hamcrest.junit.MatcherAssert.assertThat;
 
@@ -51,29 +43,11 @@ class DomainValidationTest extends DomainValidationTestBase {
   private static final String BAD_MOUNT_PATH_1 = "$DOMAIN_HOME/servers/$SERVER_NAME";
   private static final String BAD_MOUNT_PATH_2 = "$(DOMAIN_HOME/servers/$(SERVER_NAME";
   private static final String BAD_MOUNT_PATH_3 = "$()DOMAIN_HOME/servers/SERVER_NAME";
-  public static final String TEST_VOLUME_NAME = "test";
-  public static final String WRONG_VOLUME_NAME = "BadVolume";
-  public static final String LONG_CONTAINER_PORT_NAME = "long-container-port-name";
+  private static final String LONG_CONTAINER_PORT_NAME = "long-container-port-name";
 
   private final Domain domain = createTestDomain();
   private final KubernetesTestSupport testSupport = new KubernetesTestSupport();
   private final List<Memento> mementos = new ArrayList<>();
-
-  private static final String ADMIN_SERVER_NAME = "admin";
-  private static final String CLUSTER = "cluster";
-
-  private final WlsDomainConfig domainConfig = createDomainConfig();
-
-  private static WlsDomainConfig createDomainConfig() {
-    return createDomainConfig(CLUSTER);
-  }
-
-  private static WlsDomainConfig createDomainConfig(String clusterName) {
-    WlsClusterConfig clusterConfig = new WlsClusterConfig(clusterName);
-    return new WlsDomainConfig("base_domain")
-        .withAdminServer(ADMIN_SERVER_NAME, "domain1-admin-server", 7001)
-        .withCluster(clusterConfig);
-  }
 
   @BeforeEach
   public void setUp() throws Exception {
@@ -83,7 +57,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     resourceLookup.defineResource(OVERRIDES_CM_NAME_MODEL, KubernetesResourceType.ConfigMap, NS);
     resourceLookup.defineResource(OVERRIDES_CM_NAME_IMAGE, KubernetesResourceType.ConfigMap, NS);
     configureDomain(domain)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null);
+          .withWebLogicCredentialsSecret(SECRET_NAME, null);
   }
 
   @AfterEach
@@ -105,7 +79,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     domain.getSpec().getManagedServers().add(new ManagedServer().withServerName("ms1"));
 
     assertThat(domain.getValidationFailures(resourceLookup),
-               contains(stringContainsInOrder("managedServers", "ms1")));
+          contains(stringContainsInOrder("managedServers", "ms1")));
   }
 
   @Test
@@ -114,25 +88,25 @@ class DomainValidationTest extends DomainValidationTestBase {
     domain.getSpec().getManagedServers().add(new ManagedServer().withServerName("server_1"));
 
     assertThat(domain.getValidationFailures(resourceLookup),
-               contains(stringContainsInOrder("managedServers", "server-1")));
+          contains(stringContainsInOrder("managedServers", "server-1")));
   }
 
   @Test
   void whenDomainConfiguredWithAuxiliaryImageAndVolumeMountExists_reportError() {
     configureDomain(domain)
-            .withAdditionalVolumeMount("test", DEFAULT_AUXILIARY_IMAGE_MOUNT_PATH)
-            .withRuntimeEncryptionSecret("mysecret")
-            .withAuxiliaryImages(Collections.singletonList(getAuxiliaryImage("wdt-image:v1")));
+          .withAdditionalVolumeMount("test", DEFAULT_AUXILIARY_IMAGE_MOUNT_PATH)
+          .withRuntimeEncryptionSecret("mysecret")
+          .withAuxiliaryImages(Collections.singletonList(getAuxiliaryImage("wdt-image:v1")));
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("auxiliary images", "mountPath", "already in use")));
+          contains(stringContainsInOrder("auxiliary images", "mountPath", "already in use")));
   }
 
   @Test
   void whenDomainConfiguredWithAuxiliaryImageAndDomainHomeInImage_noErrorReported() {
     configureDomain(domain).withDomainHomeSourceType(IMAGE)
-            .withModelConfigMap("wdt-cm")
-            .withAuxiliaryImages(Collections.singletonList(getAuxiliaryImage("wdt-image:v1")));
+          .withModelConfigMap("wdt-cm")
+          .withAuxiliaryImages(Collections.singletonList(getAuxiliaryImage("wdt-image:v1")));
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -144,12 +118,12 @@ class DomainValidationTest extends DomainValidationTestBase {
     auxiliaryImages.add(new AuxiliaryImage().image("image2").sourceWDTInstallHome("/wdtInstallHome2"));
 
     configureDomainWithRuntimeEncryptionSecret(domain)
-            .withAuxiliaryImages(auxiliaryImages);
+          .withAuxiliaryImages(auxiliaryImages);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("More than one auxiliary image under",
-                    "'spec.configuration.model.auxiliaryImages'",
-                    "sets a 'sourceWDTInstallHome'")));
+          contains(stringContainsInOrder("More than one auxiliary image under",
+                "'spec.configuration.model.auxiliaryImages'",
+                "sets a 'sourceWDTInstallHome'")));
   }
 
   @Test
@@ -159,7 +133,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     auxiliaryImages.add(new AuxiliaryImage().image("image2").sourceWDTInstallHome("None"));
 
     configureDomainWithRuntimeEncryptionSecret(domain)
-            .withAuxiliaryImages(auxiliaryImages);
+          .withAuxiliaryImages(auxiliaryImages);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -171,7 +145,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     auxiliaryImages.add(new AuxiliaryImage().image("image2").sourceWDTInstallHome("/wdtInstallHome1"));
 
     configureDomainWithRuntimeEncryptionSecret(domain)
-            .withAuxiliaryImages(auxiliaryImages);
+          .withAuxiliaryImages(auxiliaryImages);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -179,28 +153,28 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenModelHomePlacedUnderWDTInstallHome_reportError() {
     configureDomainWithRuntimeEncryptionSecret(domain)
-            .withWDTInstallationHome("/aux")
-            .withModelHome("/aux/y");
+          .withWDTInstallationHome("/aux")
+          .withModelHome("/aux/y");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("modelHome", "is invalid",
-                    "modelHome must be outside the directory for the wdtInstallHome")));
+          contains(stringContainsInOrder("modelHome", "is invalid",
+                "modelHome must be outside the directory for the wdtInstallHome")));
   }
 
   private DomainConfigurator configureDomainWithRuntimeEncryptionSecret(Domain domain) {
     return configureDomain(domain)
-            .withRuntimeEncryptionSecret("mysecret");
+          .withRuntimeEncryptionSecret("mysecret");
   }
 
   @Test
   void whenWDTInstallHomePlacedUnderModelHome_reportError() {
     configureDomainWithRuntimeEncryptionSecret(domain)
-            .withWDTInstallationHome("/aux/y")
-            .withModelHome("/aux");
+          .withWDTInstallationHome("/aux/y")
+          .withModelHome("/aux");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("wdtInstallHome", "is invalid",
-                    "wdtInstallHome must be outside the directory for the modelHome")));
+          contains(stringContainsInOrder("wdtInstallHome", "is invalid",
+                "wdtInstallHome must be outside the directory for the modelHome")));
   }
 
   @Test
@@ -217,7 +191,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     domain.getSpec().getClusters().add(new Cluster().withClusterName("cluster1"));
 
     assertThat(domain.getValidationFailures(resourceLookup),
-               contains(stringContainsInOrder("clusters", "cluster1")));
+          contains(stringContainsInOrder("clusters", "cluster1")));
   }
 
   @Test
@@ -226,7 +200,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     domain.getSpec().getClusters().add(new Cluster().withClusterName("cluster_1"));
 
     assertThat(domain.getValidationFailures(resourceLookup),
-               contains(stringContainsInOrder("clusters", "cluster-1")));
+          contains(stringContainsInOrder("clusters", "cluster-1")));
   }
 
   @Test
@@ -248,7 +222,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     configureDomain(domain).withAdditionalVolumeMount("sharedlogs", "shared/logs");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-               contains(stringContainsInOrder("shared/logs", "sharedlogs")));
+          contains(stringContainsInOrder("shared/logs", "sharedlogs")));
   }
 
   @Test
@@ -265,7 +239,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     configureDomain(domain).withAdditionalVolumeMount("sharedlogs", "/shared/logs");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-               contains(stringContainsInOrder("log home", "/private/log/mydomain")));
+          contains(stringContainsInOrder("log home", "/private/log/mydomain")));
   }
 
   @Test
@@ -273,43 +247,43 @@ class DomainValidationTest extends DomainValidationTestBase {
     configureDomain(domain).withLogHomeEnabled(true);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-               contains(stringContainsInOrder("log home", "/shared/logs/" + UID)));
+          contains(stringContainsInOrder("log home", "/shared/logs/" + UID)));
   }
 
   @Test
   void whenDomainHasAdditionalVolumeMountsWithInvalidChar_1_reportError() {
     configureDomain(domain)
-        .withAdditionalVolumeMount("volume1", BAD_MOUNT_PATH_1);
+          .withAdditionalVolumeMount("volume1", BAD_MOUNT_PATH_1);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder(
-            "The mount path", BAD_MOUNT_PATH_1, "volume1", "of domain resource", "is not valid")));
+          contains(stringContainsInOrder(
+                "The mount path", BAD_MOUNT_PATH_1, "volume1", "of domain resource", "is not valid")));
   }
 
   @Test
   void whenDomainHasAdditionalVolumeMountsWithInvalidChar_2_reportError() {
     configureDomain(domain)
-        .withAdditionalVolumeMount("volume2", BAD_MOUNT_PATH_2);
+          .withAdditionalVolumeMount("volume2", BAD_MOUNT_PATH_2);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder(
-            "The mount path", BAD_MOUNT_PATH_2, "volume2", "of domain resource", "is not valid")));
+          contains(stringContainsInOrder(
+                "The mount path", BAD_MOUNT_PATH_2, "volume2", "of domain resource", "is not valid")));
   }
 
   @Test
   void whenDomainHasAdditionalVolumeMountsWithInvalidChar_3_reportError() {
     configureDomain(domain)
-        .withAdditionalVolumeMount("volume3", BAD_MOUNT_PATH_3);
+          .withAdditionalVolumeMount("volume3", BAD_MOUNT_PATH_3);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder(
-            "The mount path", BAD_MOUNT_PATH_3, "volume3", "of domain resource", "is not valid")));
+          contains(stringContainsInOrder(
+                "The mount path", BAD_MOUNT_PATH_3, "volume3", "of domain resource", "is not valid")));
   }
 
   @Test
   void whenDomainHasAdditionalVolumeMountsWithReservedVariables_dontReportError() {
     configureDomain(domain)
-        .withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_1);
+          .withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_1);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -317,8 +291,8 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenDomainHasAdditionalVolumeMountsWithCustomVariables_dontReportError() {
     configureDomain(domain)
-        .withEnvironmentVariable(ENV_NAME1, RAW_VALUE_1)
-        .withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
+          .withEnvironmentVariable(ENV_NAME1, RAW_VALUE_1)
+          .withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -326,31 +300,31 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenDomainHasAdditionalVolumeMountsWithNonExistingVariables_reportError() {
     configureDomain(domain)
-        .withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
+          .withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder(
-            "The mount path", RAW_MOUNT_PATH_2, "volume1", "of domain resource", "is not valid")));
+          contains(stringContainsInOrder(
+                "The mount path", RAW_MOUNT_PATH_2, "volume1", "of domain resource", "is not valid")));
   }
 
   @Test
   void whenDomainAdminServerHasAdditionalVolumeMountsWithInvalidChar_reportError() {
     configureDomain(domain)
-        .configureAdminServer()
-        .getAdminServer()
-        .addAdditionalVolumeMount("volume1", BAD_MOUNT_PATH_1);
+          .configureAdminServer()
+          .getAdminServer()
+          .addAdditionalVolumeMount("volume1", BAD_MOUNT_PATH_1);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("The mount path", BAD_MOUNT_PATH_1, 
-            "volume1", "of domain resource", "is not valid")));
+          contains(stringContainsInOrder("The mount path", BAD_MOUNT_PATH_1,
+                "volume1", "of domain resource", "is not valid")));
   }
 
   @Test
   void whenDomainAdminServerHasAdditionalVolumeMountsWithReservedVariables_dontReportError() {
     configureDomain(domain)
-        .configureAdminServer()
-        .getAdminServer()
-        .addAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_1);
+          .configureAdminServer()
+          .getAdminServer()
+          .addAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_1);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -358,10 +332,10 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenDomainAdminServerHasAdditionalVolumeMountsWithCustomVariables_dontReportError() {
     configureDomain(domain)
-        .withEnvironmentVariable(ENV_NAME1, RAW_VALUE_1)
-        .configureAdminServer()
-        .getAdminServer()
-        .addAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
+          .withEnvironmentVariable(ENV_NAME1, RAW_VALUE_1)
+          .configureAdminServer()
+          .getAdminServer()
+          .addAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -369,27 +343,27 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenDomainAdminServerHasAdditionalVolumeMountsWithNonExistingVariables_reportError() {
     configureDomain(domain)
-        .configureAdminServer()
-        .getAdminServer()
-        .addAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
+          .configureAdminServer()
+          .getAdminServer()
+          .addAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("The mount path", "volume1", "of domain resource", "is not valid")));
+          contains(stringContainsInOrder("The mount path", "volume1", "of domain resource", "is not valid")));
   }
-  
+
   @Test
   void whenClusterServerPodHasAdditionalVolumeMountsWithInvalidChar_reportError() {
     configureDomain(domain)
-        .configureCluster("Cluster-1").withAdditionalVolumeMount("volume1", BAD_MOUNT_PATH_1);
+          .configureCluster("Cluster-1").withAdditionalVolumeMount("volume1", BAD_MOUNT_PATH_1);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("The mount path", "of domain resource", "is not valid")));
+          contains(stringContainsInOrder("The mount path", "of domain resource", "is not valid")));
   }
 
   @Test
   void whenClusterServerPodHasAdditionalVolumeMountsWithReservedVariables_dontReportError() {
     configureDomain(domain)
-        .configureCluster("Cluster-1").withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_1);
+          .configureCluster("Cluster-1").withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_1);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -397,8 +371,8 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenClusterServerPodHasAdditionalVolumeMountsWithCustomVariables_dontReportError() {
     configureDomain(domain)
-        .withEnvironmentVariable(ENV_NAME1, RAW_VALUE_1)
-        .configureCluster("Cluster-1").withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
+          .withEnvironmentVariable(ENV_NAME1, RAW_VALUE_1)
+          .configureCluster("Cluster-1").withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -406,10 +380,10 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenClusterServerPodHasAdditionalVolumeMountsWithNonExistingVariables_reportError() {
     configureDomain(domain)
-        .configureCluster("Cluster-1").withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
+          .configureCluster("Cluster-1").withAdditionalVolumeMount("volume1", RAW_MOUNT_PATH_2);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("The mount path", "volume1", "of domain resource", "is not valid")));
+          contains(stringContainsInOrder("The mount path", "volume1", "of domain resource", "is not valid")));
   }
 
   @Test
@@ -422,42 +396,43 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenReservedEnvironmentVariablesSpecifiedAtDomainLevel_reportError() {
     configureDomain(domain)
-        .withEnvironmentVariable("ADMIN_NAME", "testValue")
-        .withEnvironmentVariable("INTROSPECT_HOME", "/shared/home/introspection");
+          .withEnvironmentVariable("ADMIN_NAME", "testValue")
+          .withEnvironmentVariable("INTROSPECT_HOME", "/shared/home/introspection");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("variables", "ADMIN_NAME", "INTROSPECT_HOME", "spec.serverPod.env", "are")));
+          contains(stringContainsInOrder("variables", "ADMIN_NAME", "INTROSPECT_HOME", "spec.serverPod.env", "are")));
   }
 
   @Test
   void whenReservedEnvironmentVariablesSpecifiedForAdminServer_reportError() {
     configureDomain(domain)
-        .configureAdminServer()
-        .withEnvironmentVariable("LOG_HOME", "testValue")
-        .withEnvironmentVariable("NAMESPACE", "badValue");
+          .configureAdminServer()
+          .withEnvironmentVariable("LOG_HOME", "testValue")
+          .withEnvironmentVariable("NAMESPACE", "badValue");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("variables", "LOG_HOME", "NAMESPACE", "spec.adminServer.serverPod.env", "are")));
+          contains(
+                stringContainsInOrder("variables", "LOG_HOME", "NAMESPACE", "spec.adminServer.serverPod.env", "are")));
   }
 
   @Test
   void whenReservedEnvironmentVariablesSpecifiedAtServerLevel_reportError() {
     configureDomain(domain)
-        .configureServer("ms1")
-        .withEnvironmentVariable("SERVER_NAME", "testValue");
+          .configureServer("ms1")
+          .withEnvironmentVariable("SERVER_NAME", "testValue");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("variable", "SERVER_NAME", "spec.managedServers[ms1].serverPod.env", "is")));
+          contains(stringContainsInOrder("variable", "SERVER_NAME", "spec.managedServers[ms1].serverPod.env", "is")));
   }
 
   @Test
   void whenReservedEnvironmentVariablesSpecifiedAtClusterLevel_reportError() {
     configureDomain(domain)
-        .configureCluster("cluster1")
-        .withEnvironmentVariable("DOMAIN_HOME", "testValue");
+          .configureCluster("cluster1")
+          .withEnvironmentVariable("DOMAIN_HOME", "testValue");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("variable", "DOMAIN_HOME", "spec.clusters[cluster1].serverPod.env", "is")));
+          contains(stringContainsInOrder("variable", "DOMAIN_HOME", "spec.clusters[cluster1].serverPod.env", "is")));
   }
 
   @Test
@@ -468,7 +443,7 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenWebLogicCredentialsSecretNameFoundWithExplicitNamespace_dontReportError() {
     configureDomain(domain)
-        .withWebLogicCredentialsSecret(SECRET_NAME, NS);
+          .withWebLogicCredentialsSecret(SECRET_NAME, NS);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -476,7 +451,7 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenWebLogicCredentialsSecretNamespaceUndefined_useDomainNamespace() {
     configureDomain(domain)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null);
+          .withWebLogicCredentialsSecret(SECRET_NAME, null);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -486,97 +461,97 @@ class DomainValidationTest extends DomainValidationTestBase {
     configureDomain(domain).withDefaultLivenessProbeThresholds(2, 3);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("Invalid value", "2", "liveness probe success threshold",
-                    "adminServer")));
+          contains(stringContainsInOrder("Invalid value", "2", "liveness probe success threshold",
+                "adminServer")));
   }
 
   @Test
   void whenLivenessProbeSuccessThresholdValueInvalidForCluster_reportError() {
     configureDomain(domain)
-            .configureCluster("cluster-1")
-                .withLivenessProbeSettings(5, 4, 3).withLivenessProbeThresholds(2, 3);
+          .configureCluster("cluster-1")
+          .withLivenessProbeSettings(5, 4, 3).withLivenessProbeThresholds(2, 3);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("Invalid value", "2", "liveness probe success threshold",
-                    "cluster-1")));
+          contains(stringContainsInOrder("Invalid value", "2", "liveness probe success threshold",
+                "cluster-1")));
   }
 
   @Test
   void whenLivenessProbeSuccessThresholdValueInvalidForServer_reportError() {
     configureDomain(domain)
-            .configureServer("managed-server1")
-                .withLivenessProbeSettings(5, 4, 3).withLivenessProbeThresholds(2, 3);
+          .configureServer("managed-server1")
+          .withLivenessProbeSettings(5, 4, 3).withLivenessProbeThresholds(2, 3);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("Invalid value", "2", "liveness probe success threshold",
-                    "managed-server1")));
+          contains(stringContainsInOrder("Invalid value", "2", "liveness probe success threshold",
+                "managed-server1")));
   }
 
   @Test
   void whenReservedContainerNameUsedForDomain_reportError() {
     configureDomain(domain)
-            .withContainer(new V1Container().name(WLS_CONTAINER_NAME));
+          .withContainer(new V1Container().name(WLS_CONTAINER_NAME));
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("container name", WLS_CONTAINER_NAME, "adminServer",
-                    "is reserved", "operator")));
+          contains(stringContainsInOrder("container name", WLS_CONTAINER_NAME, "adminServer",
+                "is reserved", "operator")));
   }
 
   @Test
   void whenReservedContainerNameUsedForCluster_reportError() {
     configureDomain(domain)
-            .configureCluster("cluster-1")
-                .withContainer(new V1Container().name(WLS_CONTAINER_NAME));
+          .configureCluster("cluster-1")
+          .withContainer(new V1Container().name(WLS_CONTAINER_NAME));
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("container name", WLS_CONTAINER_NAME, "cluster-1",
-                    "is reserved", "operator")));
+          contains(stringContainsInOrder("container name", WLS_CONTAINER_NAME, "cluster-1",
+                "is reserved", "operator")));
   }
 
   @Test
   void whenReservedContainerNameUsedForManagedServer_reportError() {
     configureDomain(domain)
-            .configureServer("managed-server1")
-                .withContainer(new V1Container().name(WLS_CONTAINER_NAME));
+          .configureServer("managed-server1")
+          .withContainer(new V1Container().name(WLS_CONTAINER_NAME));
 
     assertThat(domain.getValidationFailures(resourceLookup),
-            contains(stringContainsInOrder("container name", WLS_CONTAINER_NAME, "managed-server1",
-                    "is reserved", "operator")));
+          contains(stringContainsInOrder("container name", WLS_CONTAINER_NAME, "managed-server1",
+                "is reserved", "operator")));
   }
 
   @Test
   void whenContainerPortNameExceedsMaxLength_ForAdminServerContainer_reportError() {
     configureDomain(domain)
-            .withContainer(new V1Container().name("Test")
-                .ports(Arrays.asList(new V1ContainerPort().name(LONG_CONTAINER_PORT_NAME))));
+          .withContainer(new V1Container().name("Test")
+                .ports(List.of(new V1ContainerPort().name(LONG_CONTAINER_PORT_NAME))));
 
-    assertThat(domain.getValidationFailures(resourceLookup),  contains(stringContainsInOrder(
-            "Container port name ", LONG_CONTAINER_PORT_NAME, "domainUID", UID, "adminServer", "Test",
-            "exceeds maximum allowed length '15'")));
+    assertThat(domain.getValidationFailures(resourceLookup), contains(stringContainsInOrder(
+          "Container port name ", LONG_CONTAINER_PORT_NAME, "domainUID", UID, "adminServer", "Test",
+          "exceeds maximum allowed length '15'")));
   }
 
   @Test
   void whenContainerPortNameExceedsMaxLength_ForClusteredServerContainer_reportError() {
     configureDomain(domain)
-            .configureCluster("cluster-1")
-                .withContainer(new V1Container().name("Test")
-                    .ports(Arrays.asList(new V1ContainerPort().name(LONG_CONTAINER_PORT_NAME))));
+          .configureCluster("cluster-1")
+          .withContainer(new V1Container().name("Test")
+                .ports(List.of(new V1ContainerPort().name(LONG_CONTAINER_PORT_NAME))));
 
-    assertThat(domain.getValidationFailures(resourceLookup),  contains(stringContainsInOrder(
-            "Container port name ", LONG_CONTAINER_PORT_NAME, "domainUID", UID, "cluster-1", "Test",
-            "exceeds maximum allowed length '15'")));
+    assertThat(domain.getValidationFailures(resourceLookup), contains(stringContainsInOrder(
+          "Container port name ", LONG_CONTAINER_PORT_NAME, "domainUID", UID, "cluster-1", "Test",
+          "exceeds maximum allowed length '15'")));
   }
 
   @Test
   void whenContainerPortNameExceedsMaxLength_ForManagedServerContainer_reportError() {
     configureDomain(domain)
-            .configureServer("managed-server1")
-                .withContainer(new V1Container().name("Test")
-                    .ports(Arrays.asList(new V1ContainerPort().name(LONG_CONTAINER_PORT_NAME))));
+          .configureServer("managed-server1")
+          .withContainer(new V1Container().name("Test")
+                .ports(List.of(new V1ContainerPort().name(LONG_CONTAINER_PORT_NAME))));
 
-    assertThat(domain.getValidationFailures(resourceLookup),  contains(stringContainsInOrder(
-            "Container port name ", LONG_CONTAINER_PORT_NAME, "domainUID", UID, "managed-server1", "Test",
-            "exceeds maximum allowed length '15'")));
+    assertThat(domain.getValidationFailures(resourceLookup), contains(stringContainsInOrder(
+          "Container port name ", LONG_CONTAINER_PORT_NAME, "domainUID", UID, "managed-server1", "Test",
+          "exceeds maximum allowed length '15'")));
   }
 
   @Test
@@ -584,17 +559,17 @@ class DomainValidationTest extends DomainValidationTestBase {
     resourceLookup.undefineResource(SECRET_NAME, KubernetesResourceType.Secret, NS);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("WebLogicCredentials", SECRET_NAME, "not found", NS)));
+          contains(stringContainsInOrder("WebLogicCredentials", SECRET_NAME, "not found", NS)));
   }
 
   @Test
   void whenBadWebLogicCredentialsSecretNamespaceSpecified_reportError() {
     resourceLookup.defineResource(SECRET_NAME, KubernetesResourceType.Secret, "badNamespace");
     configureDomain(domain)
-        .withWebLogicCredentialsSecret(SECRET_NAME, "badNamespace");
+          .withWebLogicCredentialsSecret(SECRET_NAME, "badNamespace");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("Bad namespace", "badNamespace")));
+          contains(stringContainsInOrder("Bad namespace", "badNamespace")));
   }
 
   @Test
@@ -602,7 +577,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     configureDomain(domain).withDefaultImagePullSecret(new V1LocalObjectReference().name("no-such-secret"));
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("ImagePull", "no-such-secret", "not found", NS)));
+          contains(stringContainsInOrder("ImagePull", "no-such-secret", "not found", NS)));
 
   }
 
@@ -619,7 +594,7 @@ class DomainValidationTest extends DomainValidationTestBase {
     configureDomain(domain).withConfigOverrideSecrets("override-secret");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("ConfigOverride", "override-secret", "not found", NS)));
+          contains(stringContainsInOrder("ConfigOverride", "override-secret", "not found", NS)));
 
   }
 
@@ -644,12 +619,12 @@ class DomainValidationTest extends DomainValidationTestBase {
     resourceLookup.defineResource("overrides-cm-model", KubernetesResourceType.ConfigMap, NS);
     resourceLookup.defineResource("wdt-cm-secret", KubernetesResourceType.Secret, NS);
     configureDomain(domain).withConfigOverrides("overrides-cm-model")
-        .withRuntimeEncryptionSecret("wdt-cm-secret")
-        .withDomainHomeSourceType(FROM_MODEL);
+          .withRuntimeEncryptionSecret("wdt-cm-secret")
+          .withDomainHomeSourceType(FROM_MODEL);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("Configuration overridesConfigMap", 
-            "overrides-cm", "not supported", "FromModel")));
+          contains(stringContainsInOrder("Configuration overridesConfigMap",
+                "overrides-cm", "not supported", "FromModel")));
   }
 
   @Test
@@ -657,9 +632,9 @@ class DomainValidationTest extends DomainValidationTestBase {
     resourceLookup.defineResource("wdt-cm", KubernetesResourceType.ConfigMap, NS);
     resourceLookup.defineResource("wdt-cm-secret-model1", KubernetesResourceType.Secret, NS);
     configureDomain(domain)
-        .withRuntimeEncryptionSecret("wdt-cm-secret-model1")
-        .withModelConfigMap("wdt-cm")
-        .withDomainHomeSourceType(FROM_MODEL);
+          .withRuntimeEncryptionSecret("wdt-cm-secret-model1")
+          .withModelConfigMap("wdt-cm")
+          .withDomainHomeSourceType(FROM_MODEL);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -668,18 +643,18 @@ class DomainValidationTest extends DomainValidationTestBase {
   void whenWdtConfigMapSpecifiedButDoesNotExist_fromModel_reportError() {
     resourceLookup.defineResource("wdt-cm-secret-model2", KubernetesResourceType.Secret, NS);
     configureDomain(domain).withRuntimeEncryptionSecret("wdt-cm-secret-model2")
-        .withModelConfigMap("wdt-configmap")
-        .withDomainHomeSourceType(FROM_MODEL);
+          .withModelConfigMap("wdt-configmap")
+          .withDomainHomeSourceType(FROM_MODEL);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("ConfigMap", "wdt-configmap", "spec.configuration.model.configMap", 
-            "not found", NS)));
+          contains(stringContainsInOrder("ConfigMap", "wdt-configmap", "spec.configuration.model.configMap",
+                "not found", NS)));
   }
 
   @Test
   void whenWdtConfigMapSpecifiedButDoesNotExist_Image_dontReportError() {
     configureDomain(domain).withDomainHomeSourceType(IMAGE)
-        .withModelConfigMap("wdt-configmap");
+          .withModelConfigMap("wdt-configmap");
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -687,7 +662,7 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenRuntimeEncryptionSecretSpecifiedButDoesNotExist_Image_dontReportError() {
     configureDomain(domain).withDomainHomeSourceType(IMAGE)
-        .withRuntimeEncryptionSecret("runtime-secret");
+          .withRuntimeEncryptionSecret("runtime-secret");
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
   }
@@ -702,16 +677,16 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenRuntimeEncryptionSecretSpecifiedButDoesNotExist_fromModel_reportError() {
     configureDomain(domain).withDomainHomeSourceType(FROM_MODEL)
-        .withRuntimeEncryptionSecret("runtime-secret");
+          .withRuntimeEncryptionSecret("runtime-secret");
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("RuntimeEncryption", "runtime-secret", "not found", NS)));
+          contains(stringContainsInOrder("RuntimeEncryption", "runtime-secret", "not found", NS)));
   }
 
   @Test
   void whenRuntimeEncryptionSecretExists_fromModel_dontReportError() {
     configureDomain(domain).withDomainHomeSourceType(FROM_MODEL)
-        .withRuntimeEncryptionSecret("runtime-good-secret");
+          .withRuntimeEncryptionSecret("runtime-good-secret");
     resourceLookup.defineResource("runtime-good-secret", KubernetesResourceType.Secret, NS);
 
     assertThat(domain.getValidationFailures(resourceLookup), empty());
@@ -722,40 +697,40 @@ class DomainValidationTest extends DomainValidationTestBase {
     configureDomain(domain).withDomainHomeSourceType(FROM_MODEL);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("spec.configuration.model.runtimeEncryptionSecret", 
-            "must be specified", "FromModel")));
+          contains(stringContainsInOrder("spec.configuration.model.runtimeEncryptionSecret",
+                "must be specified", "FromModel")));
   }
 
   @Test
   void whenWalletPasswordSecretSpecifiedButDoesNotExist_fromModel_reportError() {
     configureDomain(domain).withDomainHomeSourceType(FROM_MODEL)
-        .withRuntimeEncryptionSecret("runtime-encryption-secret-good")
-        .withOpssWalletPasswordSecret("wallet-password-secret-missing");
+          .withRuntimeEncryptionSecret("runtime-encryption-secret-good")
+          .withOpssWalletPasswordSecret("wallet-password-secret-missing");
 
     resourceLookup.defineResource("runtime-encryption-secret-good", KubernetesResourceType.Secret, NS);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("secret", "wallet-password-secret-missing", "not found", NS)));
+          contains(stringContainsInOrder("secret", "wallet-password-secret-missing", "not found", NS)));
   }
 
   @Test
   void whenWalletFileSecretSpecifiedButDoesNotExist_Image_reportError() {
     configureDomain(domain).withDomainHomeSourceType(FROM_MODEL)
-        .withRuntimeEncryptionSecret("runtime-encryption-secret-good")
-        .withOpssWalletFileSecret("wallet-file-secret-missing");
+          .withRuntimeEncryptionSecret("runtime-encryption-secret-good")
+          .withOpssWalletFileSecret("wallet-file-secret-missing");
 
     resourceLookup.defineResource("runtime-encryption-secret-good", KubernetesResourceType.Secret, NS);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("secret", 
-            "wallet-file-secret-missing", "not found", NS)));
+          contains(stringContainsInOrder("secret",
+                "wallet-file-secret-missing", "not found", NS)));
   }
 
   @Test
   void whenWalletPasswordSecretExists_fromModel_dontReportError() {
     configureDomain(domain).withDomainHomeSourceType(FROM_MODEL)
-        .withRuntimeEncryptionSecret("runtime-encryption-secret-good")
-        .withOpssWalletPasswordSecret("wallet-password-secret-good");
+          .withRuntimeEncryptionSecret("runtime-encryption-secret-good")
+          .withOpssWalletPasswordSecret("wallet-password-secret-good");
     resourceLookup.defineResource("runtime-encryption-secret-good", KubernetesResourceType.Secret, NS);
     resourceLookup.defineResource("wallet-password-secret-good", KubernetesResourceType.Secret, NS);
 
@@ -765,8 +740,8 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenWalletFileSecretExists_fromModel_dontReportError() {
     configureDomain(domain).withDomainHomeSourceType(FROM_MODEL)
-        .withRuntimeEncryptionSecret("runtime-encryption-secret-good")
-        .withOpssWalletFileSecret("wallet-file-secret-good");
+          .withRuntimeEncryptionSecret("runtime-encryption-secret-good")
+          .withOpssWalletFileSecret("wallet-file-secret-good");
     resourceLookup.defineResource("runtime-encryption-secret-good", KubernetesResourceType.Secret, NS);
     resourceLookup.defineResource("wallet-file-secret-good", KubernetesResourceType.Secret, NS);
 
@@ -781,8 +756,8 @@ class DomainValidationTest extends DomainValidationTestBase {
     resourceLookup.defineResource("runtime-encryption-secret-good", KubernetesResourceType.Secret, NS);
 
     assertThat(domain.getValidationFailures(resourceLookup),
-        contains(stringContainsInOrder("spec.configuration.opss.walletPasswordSecret", 
-            "must be specified", "FromModel", "JRF")));
+          contains(stringContainsInOrder("spec.configuration.opss.walletPasswordSecret",
+                "must be specified", "FromModel", "JRF")));
   }
 
   @Test
@@ -801,7 +776,7 @@ class DomainValidationTest extends DomainValidationTestBase {
   @Test
   void whenWalletPasswordSecretUnspecified_Image_dontReportError() {
     configureDomain(domain).withDomainHomeSourceType(IMAGE)
-        .withOpssWalletFileSecret("wallet-file-secret");
+          .withOpssWalletFileSecret("wallet-file-secret");
 
     resourceLookup.defineResource("wallet-file-secret", KubernetesResourceType.Secret, NS);
 
@@ -831,9 +806,9 @@ class DomainValidationTest extends DomainValidationTestBase {
         .configureAdminService()
         .withChannel("default");
 
-    assertThat(domain.getValidationFailures(resourceLookup),  contains(stringContainsInOrder(
-        "Istio is enabled and the domain resource specified to expose channel",
-        "default")));
+    assertThat(domain.getValidationFailures(resourceLookup), contains(stringContainsInOrder(
+          "Istio is enabled and the domain resource specified to expose channel",
+          "default")));
   }
 
   @Test
@@ -848,8 +823,8 @@ class DomainValidationTest extends DomainValidationTestBase {
         .configureAdminService()
         .withChannel("default");
 
-    assertThat(myDomain.getValidationFailures(resourceLookup),  contains(stringContainsInOrder(
-        "DomainUID ", domainUID, "exceeds maximum allowed length")));
+    assertThat(myDomain.getValidationFailures(resourceLookup), contains(stringContainsInOrder(
+          "DomainUID ", domainUID, "exceeds maximum allowed length")));
   }
 
   @Test
@@ -864,9 +839,9 @@ class DomainValidationTest extends DomainValidationTestBase {
         .configureAdminService()
         .withChannel("default");
 
-    TuningParameters.getInstance().put(LegalNames.INTROSPECTOR_JOB_NAME_SUFFIX_PARAM, "introspect-domain-job");
-    assertThat(myDomain.getValidationFailures(resourceLookup),  contains(stringContainsInOrder(
-        "DomainUID ", domainUID, "exceeds maximum allowed length")));
+    TuningParametersStub.setParameter(LegalNames.INTROSPECTOR_JOB_NAME_SUFFIX_PARAM, "introspect-domain-job");
+    assertThat(myDomain.getValidationFailures(resourceLookup), contains(stringContainsInOrder(
+          "DomainUID ", domainUID, "exceeds maximum allowed length")));
   }
 
   @Test
@@ -881,8 +856,8 @@ class DomainValidationTest extends DomainValidationTestBase {
         .configureAdminService()
         .withChannel("default");
 
-    TuningParameters.getInstance().put(LegalNames.INTROSPECTOR_JOB_NAME_SUFFIX_PARAM, "-job");
-    assertThat(myDomain.getValidationFailures(resourceLookup),  empty());
+    TuningParametersStub.setParameter(LegalNames.INTROSPECTOR_JOB_NAME_SUFFIX_PARAM, "-job");
+    assertThat(myDomain.getValidationFailures(resourceLookup), empty());
   }
 
   @Test
@@ -899,524 +874,6 @@ class DomainValidationTest extends DomainValidationTestBase {
 
     TuningParameters.getInstance().put(LegalNames.INTROSPECTOR_JOB_NAME_SUFFIX_PARAM, "");
     assertThat(myDomain.getValidationFailures(resourceLookup),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusASNameNotExceedMaxAllowed_externalServiceDisabled_dontReportError() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String asName = "servernamecontains30character";
-    domainConfig.setAdminServerName(asName);
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer();
-
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusASNameNotExceedMaxAllowed_externalServiceEnabled_dontReportError() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String asName = "servernamecontains26chars";
-    domainConfig.setAdminServerName(asName);
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusASNameExceedMaxAllowed_externalServiceEnabled_reportTwoErrors() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String asName = "servernamecontains32characterss";
-    domainConfig.setAdminServerName(asName);
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  contains(
-        stringContainsInOrder(
-            "DomainUID ", domainUID, "server name", asName, "exceeds maximum allowed length"),
-        stringContainsInOrder(
-            "DomainUID ", domainUID, "admin server name", asName, "exceeds maximum allowed length")));
-  }
-
-  @Test
-  void whenDomainUidPlusASNameExceedMaxAllowed_externalServiceDisabled_reportOneError() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String asName = "servernamecontains32characterss";
-    domainConfig.setAdminServerName(asName);
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer();
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  contains(
-        stringContainsInOrder(
-            "DomainUID ", domainUID, "server name", asName, "exceeds maximum allowed length")));
-  }
-
-  @Test
-  void whenDomainUidPlusASNameOnlyExternalServiceExceedMaxAllowed_reportOneError() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String asName = "servernamecontains30characters";
-    domainConfig.setAdminServerName(asName);
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  contains(stringContainsInOrder(
-        "DomainUID ", domainUID, "admin server name", asName, "exceeds maximum allowed length")));
-  }
-
-  @Test
-  void whenDomainUidPlusASNameNotExceedMaxAllowedWithCustomSuffix_dontReportError() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String asName = "servernamecontains21c";
-    domainConfig.setAdminServerName(asName);
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    TuningParameters.getInstance().put(LegalNames.EXTERNAL_SERVICE_NAME_SUFFIX_PARAM, "-external");
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusASNameNotExceedMaxAllowedWithEmptyCustomSuffix_dontReportError() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String asName = "servernamecontains30characters";
-    domainConfig.setAdminServerName(asName);
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    TuningParameters.getInstance().put(LegalNames.EXTERNAL_SERVICE_NAME_SUFFIX_PARAM, "");
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusASNameExceedMaxAllowedWithCustomSuffix_reportTwoErrors() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String asName = "servernamecontains31characterss";
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    domainConfig.setAdminServerName(asName);
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    TuningParameters.getInstance().put(LegalNames.EXTERNAL_SERVICE_NAME_SUFFIX_PARAM, "-external");
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  contains(
-        stringContainsInOrder(
-            "DomainUID ", domainUID, "server name", asName, "exceeds maximum allowed length"),
-        stringContainsInOrder(
-            "DomainUID ", domainUID, "admin server name", asName, "exceeds maximum allowed length")));
-  }
-
-  @Test
-  void whenDomainUidPlusMSNameNotExceedMaxAllowed_dontReportError() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String msName = "servernamecontains29characte";
-    domainConfig.getClusterConfig(CLUSTER)
-        .addServerConfig(new WlsServerConfig(msName, "domain1-" + msName, 8001));
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusMSNameNotExceedMaxAllowedWithClusterSize9_dontReportError() {
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("CLUSTER-9");
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String msName = "servernamecontains27charact";
-    for (int i = 1; i < 10; i++) {
-      domainConfigWithCluster.getClusterConfig("CLUSTER-9")
-          .addServerConfig(new WlsServerConfig(msName + i, "domain1-" + msName + "-" + i, 8001));
-    }
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusMSNameNotExceedMaxAllowedWithClusterSize99_dontReportError() {
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("CLUSTER-99-good");
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String msName = "servernamecontains27charact";
-
-    for (int i = 1; i < 100; i++) {
-      domainConfigWithCluster.getClusterConfig("CLUSTER-99-good")
-          .addServerConfig(new WlsServerConfig(msName + i, "domain1-" + msName + "-" + i, 8001));
-    }
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusMSNameExceedMaxAllowedWithClusterSize9_reportError() {
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("CLUSTER-9-bad");
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String msNameBase = "servernamecontains28characte";
-
-    ArrayList<String> errors = new ArrayList<>();
-    for (int i = 1; i < 10; i++) {
-      String msName = msNameBase + i;
-      domainConfigWithCluster.getClusterConfig("CLUSTER-9-bad")
-          .addServerConfig(new WlsServerConfig(msName, "domain1-" + msName, 8001));
-      errors.add(String.format(
-          "DomainUID '%s' and server name '%s' combination '%s' exceeds maximum allowed length '61'.",
-          domainUID, msName, LegalNames.toServerServiceName(domainUID, msName)));
-    }
-
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-    List<String> reported = myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket());
-    assertThat(reported, hasSize(9));
-    for (int i = 0; i < reported.size(); i++) {
-      assertThat(reported.get(i), equalTo(errors.get(i)));
-    }
-  }
-
-  @Test
-  void whenDomainUidPlusMSNameExceedMaxAllowedWithClusterSize99_reportError() {
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("CLUSTER-99-bad");
-    String domainUID = "mydomainnamecontains32characterS";
-    Domain myDomain = createTestDomain(domainUID);
-    String msNameBase = "servernamecontains28charactE";
-    ArrayList<String> errors = new ArrayList<>();
-    for (int i = 1; i < 100; i++) {
-      String msName = msNameBase + i;
-      domainConfigWithCluster.getClusterConfig("CLUSTER-99-bad")
-          .addServerConfig(new WlsServerConfig(msName, "domain1-" + msName, 8001));
-      errors.add(String.format(
-          "DomainUID '%s' and server name '%s' combination '%s' exceeds maximum allowed length '62'.",
-          domainUID, msName, LegalNames.toServerServiceName(domainUID, msName)));
-    }
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-    List<String> reported = myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket());
-    // the first 9 servers are fine so we only get 90 errors
-    assertThat(reported, hasSize(90));
-    for (int i = 0; i < reported.size(); i++) {
-      assertThat(reported.get(i), equalTo(errors.get(i + 9)));
-    }
-  }
-
-  @Test
-  void whenDomainUidPlusMSNameExceedMaxAllowedWithClusterSize100_noExtrSpaceShouldBeReserved_dontReportError() {
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("CLUSTER-100-good");
-    String domainUID = "mydomainnamecontains32charactess";
-    Domain myDomain2 = createTestDomain(domainUID);
-    String msNameBase = "servernamecontains27characs";
-    for (int i = 1; i <= 100; i++) {
-      String msName = msNameBase + i;
-      domainConfigWithCluster.getClusterConfig("CLUSTER-100-good")
-          .addServerConfig(new WlsServerConfig(msName, "domain1-" + msName, 8001));
-    }
-    configureDomain(myDomain2)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-    assertThat(myDomain2.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusMSNameExceedMaxAllowedWithClusterSize9ButClusterPaddingDisabled_dontReportError() {
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("CLUSTER-9-bad-ok");
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String msNameBase = "servernamecontains28characte";
-
-    ArrayList<String> errors = new ArrayList<>();
-    for (int i = 1; i < 10; i++) {
-      String msName = msNameBase + i;
-      domainConfigWithCluster.getClusterConfig("CLUSTER-9-bad-ok")
-          .addServerConfig(new WlsServerConfig(msName, "domain1-" + msName, 8001));
-      errors.add(String.format(
-          "DomainUID '%s' and server name '%s' combination '%s' exceeds maximum allowed length '61'.",
-          domainUID, msName, LegalNames.toServerServiceName(domainUID, msName)));
-    }
-
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-    TuningParametersStub.setParameter(Domain.CLUSTER_SIZE_PADDING_VALIDATION_ENABLED_PARAM, "false");
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusMSNameExceedMaxAllowedWithClusterSize99ButClusterPaddingDisabled_reportError() {
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("CLUSTER-99-bad-ok");
-    String domainUID = "mydomainnamecontains32characterS";
-    Domain myDomain = createTestDomain(domainUID);
-    String msNameBase = "servernamecontains28charactE";
-    ArrayList<String> errors = new ArrayList<>();
-    for (int i = 1; i < 100; i++) {
-      String msName = msNameBase + i;
-      domainConfigWithCluster.getClusterConfig("CLUSTER-99-bad-ok")
-          .addServerConfig(new WlsServerConfig(msName, "domain1-" + msName, 8001));
-      errors.add(String.format(
-          "DomainUID '%s' and server name '%s' combination '%s' exceeds maximum allowed length '62'.",
-          domainUID, msName, LegalNames.toServerServiceName(domainUID, msName)));
-    }
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-    TuningParametersStub.setParameter(Domain.CLUSTER_SIZE_PADDING_VALIDATION_ENABLED_PARAM, "false");
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusClusterNameNotExceedMaxAllowed_dontReportError() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String clusterName = "clusternamecontain21c";
-    domainConfig.withCluster(new WlsClusterConfig(clusterName));
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainUidPlusClusterNameExceedMaxAllowed_reportError() {
-    String domainUID = "mydomainnamecontains32characters";
-    Domain myDomain = createTestDomain(domainUID);
-    String clusterName = "servernamecontains31characters";
-    domainConfig.withCluster(new WlsClusterConfig(clusterName));
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfig);
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  contains(stringContainsInOrder(
-        "DomainUID ", domainUID, "cluster name", clusterName, "exceeds maximum allowed length")));
-  }
-
-  @Test
-  void whenDomainServerHasListenPort_dontReportError() {
-    String domainUID = "TestDomainForRest";
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("TestClusterForRest");
-    Domain myDomain = createTestDomain(domainUID);
-    String msNameBase = "TestServerForRest";
-    String msName = msNameBase + 1;
-    WlsServerConfig server = new WlsServerConfig(msName, domainUID + "-" + msName, 8001);
-    server.setSslListenPort(null);
-    server.setAdminPort(null);
-    server.addNetworkAccessPoint(new NetworkAccessPoint("test-nap", "t3", 9001, 9001));
-    domainConfigWithCluster.getClusterConfig("TestClusterForRest").addServerConfig(server);
-
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainServerHasSSLListenPort_dontReportError() {
-    String domainUID = "TestDomainForRest";
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("TestClusterForRest");
-    Domain myDomain = createTestDomain(domainUID);
-    String msNameBase = "TestServerForRest";
-    String msName = msNameBase + 1;
-    WlsServerConfig server = new WlsServerConfig(msName, domainUID + "-" + msName, 0);
-    server.setListenPort(null);
-    server.setSslListenPort(9001);
-    server.setAdminPort(null);
-    domainConfigWithCluster.getClusterConfig("TestClusterForRest").addServerConfig(server);
-
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainServerHasAdminPort_dontReportError() {
-    String domainUID = "TestDomainForRest";
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("TestClusterForRest");
-    Domain myDomain = createTestDomain(domainUID);
-    String msNameBase = "TestServerForRest";
-    String msName = msNameBase + 1;
-    WlsServerConfig server = new WlsServerConfig(msName, domainUID + "-" + msName, 0);
-    server.setListenPort(null);
-    server.setSslListenPort(null);
-    server.setAdminPort(8800);
-    domainConfigWithCluster.getClusterConfig("TestClusterForRest").addServerConfig(server);
-
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainServerHasAdminNAP_dontReportError() {
-    String domainUID = "TestDomainForRest";
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("TestClusterForRest");
-    Domain myDomain = createTestDomain(domainUID);
-    String msNameBase = "TestServerForRest";
-    String msName = msNameBase + 1;
-    WlsServerConfig server = new WlsServerConfig(msName, domainUID + "-" + msName, 8001);
-    server.setListenPort(null);
-    server.setSslListenPort(null);
-    server.setAdminPort(null);
-    server.addNetworkAccessPoint(new NetworkAccessPoint("test-nap", "admin", 9001, 9001));
-    domainConfigWithCluster.getClusterConfig("TestClusterForRest").addServerConfig(server);
-
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS)
-        .configureAdminServer()
-        .configureAdminService()
-        .withChannel("default");
-
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  empty());
-  }
-
-  @Test
-  void whenDomainServerNoAvailablePortForREST_reportError() {
-    String domainUID = "TestDomainForRest";
-    WlsDomainConfig domainConfigWithCluster = createDomainConfig("TestClusterForRest");
-    Domain myDomain = createTestDomain(domainUID);
-    String msNameBase = "TestServerForRest";
-    String msName = msNameBase + 1;
-    WlsServerConfig server = new WlsServerConfig(msName, domainUID + "-" + msName, 8001);
-    server.setListenPort(null);
-    server.setSslListenPort(null);
-    server.setAdminPort(null);
-    server.addNetworkAccessPoint(new NetworkAccessPoint("test-nap", "t3", 9001, 9001));
-    domainConfigWithCluster.getClusterConfig("TestClusterForRest").addServerConfig(server);
-
-    configureDomain(myDomain)
-        .withDomainHomeSourceType(IMAGE)
-        .withWebLogicCredentialsSecret(SECRET_NAME, null)
-        .withDomainType(ModelInImageDomainType.WLS);
-
-    testSupport.addToPacket(DOMAIN_TOPOLOGY, domainConfigWithCluster);
-
-    assertThat(myDomain.getAfterIntrospectValidationFailures(testSupport.getPacket()),  contains(stringContainsInOrder(
-        "DomainUID", domainUID, "server", msName,
-        "does not have a port available for the operator to send REST calls.")));
   }
 
   private DomainConfigurator configureDomain(Domain domain) {
